--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "ember-cli-babel": "6.6.0",
     "ember-promise-tools": "1.0.0",
     "ember-runtime-enumerable-includes-polyfill": "2.0.0",
-    "ember-string-ishtmlsafe-polyfill": "^2.0.0"
+    "ember-string-ishtmlsafe-polyfill": "^2.0.0",
+    "semantic-ui-css": "^2.2.14"
   },
   "devDependencies": {
     "babel-plugin-transform-es2015-block-scoping": "^6.24.1",
