--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "ember-cli-babel": "6.6.0",
+    "ember-cli-htmlbars": "^2.0.3",
     "ember-promise-tools": "1.0.0",
     "ember-runtime-enumerable-includes-polyfill": "2.0.0",
     "ember-string-ishtmlsafe-polyfill": "^2.0.0",
