fingers crossed... again...

--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
     "ember-cli-htmlbars": "^2.0.3",
     "ember-promise-utils": "^0.1.1",
     "ember-runtime-enumerable-includes-polyfill": "2.0.0",
-    "semantic-ui-css": "^2.2.14"
+    "semantic-ui-css": "2.2.13"
   },
   "devDependencies": {
     "babel-plugin-transform-es2015-block-scoping": "^6.24.1",
     "broccoli-asset-rev": "^2.4.5",
     "broccoli-funnel": "^2.0.1",
-    "broccoli-merge-trees": "^2.0.0",
+    "broccoli-merge-trees": "^3.0.0",
     "broccoli-stew": "^1.5.0",
     "ember-ajax": "3.0.0",
     "ember-cli": "^3.0.0",
