--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "gh-pages": "ember build && ember github-pages:commit --message \"Deploy gh-pages from commit $(git rev-parse HEAD)\" && git push origin gh-pages:gh-pages -f"
   },
   "dependencies": {
-    "ember-cli-babel": "^6.11.0",
+    "ember-cli-babel": "6.6.0",
     "ember-cli-htmlbars": "^2.0.3",
     "ember-promise-utils": "^0.1.1",
     "ember-runtime-enumerable-includes-polyfill": "2.0.0",
