--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "semantic-ui-ember",
-  "version": "3.0.3",
+  "version": "2.0.1",
   "description": "The Official Semantic UI Addon for Ember applications",
   "keywords": [
     "ember-addon"
@@ -10,10 +10,6 @@
   "title": "Semantic UI Ember",
   "homepage": "http://www.semantic-ui.com",
   "contributors": [
-    {
-      "name": "Arnav Gupta",
-      "email": "dev@championswimmer.in"
-    },
     {
       "name": "Nathan Palmer",
       "email": "nathan@nathanpalmer.com"
@@ -34,48 +30,42 @@
   "scripts": {
     "build": "ember build",
     "start": "ember server",
-    "test": "ember try:each",
-    "gh-pages": "ember build && ember github-pages:commit --message \"Deploy gh-pages from commit $(git rev-parse HEAD)\" && git push origin gh-pages:gh-pages -f"
+    "test": "ember try:each"
   },
   "dependencies": {
     "ember-cli-babel": "6.6.0",
-    "ember-cli-htmlbars": "^2.0.3",
-    "ember-promise-utils": "^0.1.1",
+    "ember-promise-tools": "1.0.0",
     "ember-runtime-enumerable-includes-polyfill": "2.0.0",
-    "semantic-ui-css": "^2.2.0"
+    "ember-string-ishtmlsafe-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "babel-plugin-transform-es2015-block-scoping": "^6.24.1",
     "broccoli-asset-rev": "^2.4.5",
-    "broccoli-funnel": "^2.0.1",
-    "broccoli-merge-trees": "^3.0.0",
+    "broccoli-funnel": "^1.2.0",
+    "broccoli-merge-trees": "^2.0.0",
     "broccoli-stew": "^1.5.0",
     "ember-ajax": "3.0.0",
-    "ember-cli": "^3.0.0",
-    "ember-cli-clipboard": "^0.8.1",
-    "ember-cli-code-coverage": "^0.4.2",
-    "ember-cli-dependency-checker": "^2.1.0",
+    "ember-cli": "2.14.1",
+    "ember-cli-clipboard": "0.8.0",
+    "ember-cli-dependency-checker": "2.0.1",
     "ember-cli-eslint": "^4.2.0",
     "ember-cli-fastboot": "^1.0.4",
+    "ember-cli-github-pages": "0.1.2",
     "ember-cli-htmlbars": "2.0.2",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.2",
+    "ember-cli-htmlbars-inline-precompile": "0.4.3",
     "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-qunit": "^4.3.2",
+    "ember-cli-qunit": "^3.0.2",
     "ember-cli-shims": "^1.0.2",
     "ember-cli-sri": "^2.1.0",
-    "ember-cli-uglify": "^2.0.0",
-    "ember-composable-helpers": "^2.1.0",
+    "ember-cli-uglify": "^1.2.0",
+    "ember-composable-helpers": "2.0.3",
     "ember-disable-prototype-extensions": "^1.1.0",
     "ember-export-application-global": "2.0.0",
     "ember-load-initializers": "1.0.0",
-    "ember-resolver": "^4.5.0",
-    "ember-source": "^3.0.0",
-    "ember-source-channel-url": "^1.0.1",
-    "ember-try": "^0.2.23",
-    "highlightjs": "^9.10.0",
+    "ember-resolver": "4.3.0",
+    "ember-source": "~2.14.0",
     "loader.js": "^4.0.10",
-    "tape": "^4.9.0",
-    "walk-sync": "^0.3.1"
+    "tape": "^4.6.0"
   },
   "engines": {
     "node": ">= 4"
